# samples_parser

./: .coverage  .gitignore  README.md  database.ipynb  output.txt  pyproject.toml  pytest.ini_  sample_types.ipynb  samples.db  samples.pkl  samples_list.txt  samples_syntax.txt  setup.cfg
data/: samples.pkl
notebooks/: band_album_song_data.json  cleaning_up_links.ipynb  database.ipynb  database_ab_ovo.ipynb  sample_types.ipynb  samples_data.xlsx  with_discogs_ids.pkl  with_discogs_ids_2.pkl  with_discogs_ids_3.pkl  with_discord_ids.pkl
src/samples_parser/: basic_structure.py  contained_string.py  database_model.py  grammars.py
tests/: test_basic_structure.py  test_basic_structure.py_  test_complete_parser.py  test_contained_string.py  test_separate_logic.py_
