[tool.poetry]
name = "samples-parser"
version = "0.1.0"
description = "Lark code to parse the samples for the samples_revived repo"
authors = ["Tomislav Nazifović <tomislav.nazifovic@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "samples_parser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1"
rich = "^13.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^22.12"
flake8 = "^6.0"
mypy = "^1"
isort = "^5.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
